@@ -1,7 +1,8 @@
 // Copyright 2002-2011, University of Colorado
 package edu.colorado.phet.beerslawlab.model;
 
-import edu.colorado.phet.common.phetcommon.math.ImmutableVector2D;
+import java.awt.geom.Point2D;
+
 import edu.umd.cs.piccolo.util.PDimension;
 
 /**
@@ -11,18 +12,18 @@ import edu.umd.cs.piccolo.util.PDimension;
  */
 public class Beaker {
 
-    private final ImmutableVector2D location; // bottom center
+    private final Point2D location; // bottom center
     private final PDimension size;
     private final double volume; // L
 
-    public Beaker( ImmutableVector2D location, PDimension size, double volume ) {
+    public Beaker( Point2D location, PDimension size, double volume ) {
         this.location = location;
         this.size = new PDimension( size );
         this.volume = volume;
     }
 
-    public ImmutableVector2D getLocation() {
-        return location;
+    public Point2D getLocation() {
+        return new Point2D.Double( location.getX(), location.getY() );
     }
 
     public double getX() {
