@@ -1,7 +1,8 @@
 // Copyright 2002-2011, University of Colorado
 package edu.colorado.phet.beerslawlab.model;
 
-import edu.colorado.phet.common.phetcommon.math.ImmutableVector2D;
+import java.awt.geom.Point2D;
+
 import edu.colorado.phet.common.phetcommon.model.Resettable;
 import edu.colorado.phet.common.phetcommon.model.property.Property;
 
@@ -12,13 +13,13 @@ import edu.colorado.phet.common.phetcommon.model.property.Property;
  */
 public class Faucet implements Resettable {
 
-    private final ImmutableVector2D location; // center of output pipe
+    private final Point2D location; // center of output pipe
     private final double inputPipeLength;
     private final double maxFlowRate;
     public final Property<Double> flowRate;
     public final Property<Boolean> enabled;
 
-    public Faucet( ImmutableVector2D location, double inputPipeLength, double maxFlowRate ) {
+    public Faucet( Point2D location, double inputPipeLength, double maxFlowRate ) {
         assert ( maxFlowRate > 0 );
         this.location = location;
         this.inputPipeLength = inputPipeLength;
@@ -27,8 +28,8 @@ public class Faucet implements Resettable {
         this.enabled = new Property<Boolean>( true );
     }
 
-    public ImmutableVector2D getLocation() {
-        return location;
+    public Point2D getLocation() {
+        return new Point2D.Double( location.getX(), location.getY() );
     }
 
     public double getInputPipeLength() {
